<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gagik.drugsreminder.ui.viewModels.ReminderViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.ReminderFragment">


        <Button
            android:id="@+id/pick_time_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:text="@string/pick_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/preview_picked_time_textView"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:textAlignment="center"
            android:text="@{viewModel.selectedTimeText}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_time_button"
            tools:text="@string/preview_picked_time" />

        <Button
            android:id="@+id/select_drug_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/select_drug"
            app:layout_constraintEnd_toEndOf="@+id/preview_picked_time_textView"
            app:layout_constraintStart_toStartOf="@+id/preview_picked_time_textView"
            app:layout_constraintTop_toBottomOf="@+id/preview_picked_time_textView" />

        <Button
            android:id="@+id/set_alarm_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/set_alarm"
            app:layout_constraintEnd_toEndOf="@+id/preview_picked_time_textView"
            app:layout_constraintStart_toStartOf="@+id/preview_picked_time_textView"
            app:layout_constraintTop_toBottomOf="@+id/select_drug_btn" />

        <TextView
            android:id="@+id/selected_drug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@{viewModel.selectedDrugText}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/select_drug_btn"
            app:layout_constraintStart_toStartOf="@+id/select_drug_btn"
            app:layout_constraintTop_toTopOf="@+id/preview_picked_time_textView" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/active_factor_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selected_drug">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/weeks_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/monday"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/monday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tuesday"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuesday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/wednesday"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wednesday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/thursday"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thursday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/friday"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/saturday"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saturday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sunday"
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunday" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>